# misis2023f-22-01-lopatkin-a-a

./: .gitignore  CMakeLists.txt  README.md  codeforces.id  status.md
docs/: abstract_factory_example.cpp  Абстрактная фабрика - Лопаткин Антон - БПМ-22-1.md
prj.codeforces/: 1884a.cpp  1884b.cpp  1902a.cpp  1902b.cpp  1904a.cpp  1905a.cpp  1905b.cpp  1913a.cpp  1913b.cpp  1913c.cpp  1915a.cpp  1915b.cpp  1915c.cpp  1915d.cpp  1915e.cpp  1917a.cpp  1917b.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt  example.cpp
prj.cw/asterisms/: CMakeLists.txt
prj.cw/asterisms/doc/: Doxyfile
prj.cw/asterisms/include/asterisms/: asterisms.hpp
prj.cw/asterisms/src/: asterisms.cpp
prj.cw/data/: left_points.txt  points.txt  right_points.txt
prj.cw/doc/: Doxyfile
