add_executable(1884a 1884a.cpp)
add_executable(1884b 1884b.cpp)
add_executable(1913a 1913a.cpp)
add_executable(1913b 1913b.cpp)
add_executable(1913c 1913c.cpp)
add_executable(1917a 1917a.cpp)
add_executable(1917b 1917b.cpp)
add_executable(1905a 1905a.cpp)
add_executable(1905b 1905b.cpp)
add_executable(1904a 1904a.cpp)
add_executable(1902a 1902a.cpp)
add_executable(1902b 1902b.cpp)
add_executable(1915a 1915a.cpp)
add_executable(1915b 1915b.cpp)
add_executable(1915c 1915c.cpp)
add_executable(1915d 1915d.cpp)
add_executable(1915e 1915e.cpp)